streamlined word build.